--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-GOOGLE_API_KEY=AIzaSyCibbWUdSQeS16azAzuH-uUgmS9_pAI2ag
-
-GROQ_API_KEY=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
+GOOGLE_API_KEY=Mention your API key here
